// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders Default without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-box--focusable rcx-css-vsh9r1 rcx-css-k3fjzq"
      role="button"
      tabindex="0"
    >
      <div
        class="rcx-box rcx-box--full rcx-css-1n09zs3"
      >
        Announcement
      </div>
    </div>
  </div>
</body>
`;

exports[`renders WithLink without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-box--focusable rcx-css-vsh9r1 rcx-css-k3fjzq"
      role="button"
      tabindex="0"
    >
      <div
        class="rcx-box rcx-box--full rcx-css-1n09zs3"
      >
        <a
          href="https://rocket.chat"
          target="_blank"
        >
          Announcement
        </a>
      </div>
    </div>
  </div>
</body>
`;
